# manzil

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  README.md  eslint-prettier-reminder.txt  eslint.config.js  package.json  tsconfig.json
.github/workflows/: deploy.yml
assets/: chapters-data.json  embed_json.zig  surah.json  verses_en_sam-gerrans_with-notes.json
cmake/: zig-toolchain.cmake  zigar  zigcc  zigcxx  zigranlib
src/: App.tsx  ChaptersPage.tsx  VersesData.ts  embed_json.odin  events.cpp  events.hpp  frontend.tsx  index.css  index.html  main.cpp  manzil.cpp  manzil.hpp  quranite.cpp  quranite.hpp  types.hpp
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/assets/: notes_en_sam-gerrans.json  verses_ar_original.json  versesimple.json
src/components/: about_dialog.cpp  about_dialog.hpp  frame.cpp  frame.hpp  header_card.cpp  header_card.hpp  quranite.cpp  quranite.hpp  reader.cpp  reader.hpp  reader_dialog.cpp  reader_dialog.hpp  surah_card.cpp  surah_card.hpp
src/features/chapters/: ChaptersPage.tsx  chapters.css  index.ts
src/features/chapters/components/: Bismillah.tsx  Verse.tsx
src/features/home/: HomePage.tsx
src/shared/assets/: verses_en_sam-gerrans.json
src/shared/scripts/: VersesData.ts  index.ts
