[package]
name = "manzil"
version = "1.0.0"
description = "Quranite Reader"
authors = ["fauzim"]
license = "MIT"
repository = "https://github.com/fauzimhub/manzil.git"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "manzil_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"

[profile.release]
opt-level = "z"      # optimize for size (vs "s" which is slightly larger but faster)
lto = true           # link-time optimization
codegen-units = 1    # better optimization, slower compile
panic = "abort"      # removes panic unwinding code
strip = true         # strip symbols
